# usertool

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: database.h  user.h  usertool.h
src/: bsd2linux.cc  daemon.cc  database.cc  filtersystem.cc  flawsearch.cc  group.cc  group.h  linux2bsd.cc  meson.build  passwordupdate.cc  removeusers.cc  string_methods.cc  string_methods.h  system.cc  system.h  system2yaml.cc  systemupdate.cc  updatedatabase.cc  user.cc  usertool.cc  usertool.h
